Rename post scaffold to story

--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -1,11 +1,11 @@
-<%= form_with(model: post, local: true) do |form| %>
-  <% if post.errors.any? %>
+<%= form_with(model: story, local: true) do |form| %>
+  <% if story.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(post.errors.count, "error") %>
-        prohibited this post from being saved:</h2>
+      <h2><%= pluralize(story.errors.count, "error") %>
+        prohibited this story from being saved:</h2>
 
       <ul>
-      <% post.errors.full_messages.each do |message| %>
+      <% story.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
