--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,6 +1,8 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Stories</h1>
+
+<%= render 'form' %>
+
+<br>
 
 <table>
   <thead>
@@ -11,22 +13,9 @@
     </tr>
   </thead>
 
-  <tbody>
-    <% @stories.each do |story| %>
-      <tr>
-        <td><%= story.title %></td>
-        <td><%= story.body %></td>
-        <td><%= link_to 'Show', story %></td>
-        <td><%= link_to 'Edit', edit_story_path(story) %></td>
-        <td><%= link_to 'Destroy', story,
-                        method: :delete,
-                        data: { confirm: 'Are you sure?' },
-                        class: 'btn btn-default' %></td>
-      </tr>
-    <% end %>
+  <tbody id="stories">
+    <%= render @stories %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New story', new_story_path %>
