--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,10 @@
   </head>
 
   <body>
-    <div id="notifications"><%= flash[:success] %></div>
+    <div id="notifications"></div>
+    <% flash.each do |name, msg| %>
+      <%= content_tag :div, msg, :id => "flash_#{name}" %>
+    <% end %>
 
     <%= yield %>
   </body>
