Add relation between users and stories

--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Stories</h1>
 
-<%= render 'form' %>
-
-<br>
+<p class="new-story-link">
+  <%= link_to 'Share a new story', new_story_path, remote: true %>
+</p>
 
 <table>
   <thead>
