--- a/app/views/stories/_story.html.erb
+++ b/app/views/stories/_story.html.erb
@@ -1,9 +1,11 @@
 <tr id="edit_story_<%= story.id %>">
   <td><%= story.title %></td>
   <td><%= story.body %></td>
-  <td><%= link_to 'Edit', edit_story_path(story), remote: true %></td>
-  <td><%= link_to 'Destroy', story,
-                  method: :delete,
-                  remote: true,
-                  data: { confirm: 'Are you sure?' } %></td>
+  <% if story.owner? current_user %>
+    <td><%= link_to 'Edit', edit_story_path(story), remote: true %></td>
+    <td><%= link_to 'Destroy', story,
+                    method: :delete,
+                    remote: true,
+                    data: { confirm: 'Are you sure?' } %></td>
+  <% end %>
 </tr>
