Fix notification messages
Flash now when respond to js

--- a/app/views/stories/create.js.erb
+++ b/app/views/stories/create.js.erb
@@ -1,6 +1,6 @@
 $(function() {
   $('form')[0].remove()
   $('.new-story-link').show()
-  $('#stories').prepend('<%= j render @story %>')
-  $('#notifications').html('<%= j flash[:success] %>')
+  $('.stories').prepend('<%= j render @story %>')
+  $('#notifications').html('<%= j notice %>')
 })
