--- a/app/views/stories/new.js.erb
+++ b/app/views/stories/new.js.erb
@@ -1,3 +1,3 @@
 $(function() {
-  $('.new-story-link').hide().after("<%= j render 'form' %>")
+  $('body').append("<%= j render 'modal' %>").hide().fadeIn(200)
 })
