Add style for the modal and story form

--- a/app/views/stories/_story.html.erb
+++ b/app/views/stories/_story.html.erb
@@ -1,11 +1,13 @@
-<tr id="edit_story_<%= story.id %>">
-  <td><%= story.title %></td>
-  <td><%= story.body %></td>
+<div class="story" id="edit_story_<%= story.id %>">
+  <h3><%= story.title %></h3>
+  <p><%= story.body %></p>
   <% if story.owner? current_user %>
-    <td><%= link_to 'Edit', edit_story_path(story), remote: true %></td>
-    <td><%= link_to 'Destroy', story,
-                    method: :delete,
-                    remote: true,
-                    data: { confirm: 'Are you sure?' } %></td>
+  <div class="story-buttons">
+    <%= link_to 'Edit', edit_story_path(story), remote: true %>
+    <%= link_to 'Destroy', story,
+                  method: :delete,
+                  remote: true,
+                  data: { confirm: 'Are you sure?' } %>
+  </div>
   <% end %>
-</tr>
+</div>
