--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,21 +1,7 @@
-<h1>Stories</h1>
-
-<p class="new-story-link">
+<div class="new-story-link">
   <%= link_to 'Share a new story', new_story_path, remote: true %>
-</p>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Body</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody class="stories">
-    <%= render @stories %>
-  </tbody>
-</table>
-
-<br>
+<div class="stories">
+  <%= render @stories %>
+</div>
