--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @story) do |form| %>
+<%= form_with(model: @story, class: 'story-form') do |form| %>
   <% if @story.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@story.errors.count, "error") %>
@@ -14,15 +14,16 @@
 
   <div class="field">
     <%= form.label :title %>
-    <%= form.text_field :title, maxlength: 65 %>
+    <%= form.text_field :title, autofocus: true,
+                                placeholder: 'Write your title...' %>
   </div>
 
   <div class="field">
     <%= form.label :body %>
-    <%= form.text_area :body %>
+    <%= form.text_area :body, placeholder: 'Write your story...' %>
   </div>
 
-  <div class="actions">
+  <div class="action">
     <%= form.submit data: { disable_with: 'Creating story...' } %>
   </div>
 <% end %>
