--- a/app/assets/stylesheets/pages/stories.scss
+++ b/app/assets/stylesheets/pages/stories.scss
@@ -18,6 +18,48 @@
   }
 }
 
+.stories {
+  .story {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 60px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    h3 {
+      font-weight: normal;
+      font-size: 26px;
+      word-wrap: break-word;
+    }
+
+    span {
+      margin-top: 8px;
+      font-size: 14px;
+      opacity: 0.6;
+    }
+
+    article {
+      margin: 20px 0;
+
+      p {
+        word-spacing: 1px;
+        text-align: justify;
+        line-height: 34px;
+      }
+    }
+
+    .story-actions {
+      align-self: flex-end;
+
+      a {
+        margin-left: 15px;
+      }
+    }
+  }
+}
+
 .story-form {
   display: flex;
   flex-direction: column;
