--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,18 +1,7 @@
 <section class="sessions">
   <h6>Sign Up</h6>
 
-  <%= form_for @user do |f| %>
-    <% if @user.errors.any? %>
-      <div class="error_messages">
-        <h2>Form is invalid</h2>
-        <ul>
-          <% for message in @user.errors.full_messages %>
-            <li><%= message %></li>
-          <% end %>
-        </ul>
-      </div>
-    <% end %>
-
+  <%= form_with model: @user do |f| %>
     <div class="field">
       <%= f.label :nickname %>
       <%= f.text_field :nickname, autofocus: true %>
