--- a/app/views/stories/edit.js.erb
+++ b/app/views/stories/edit.js.erb
@@ -1,3 +1,3 @@
 $(function() {
-  $('body').append("<%= j render 'modal' %>").hide().fadeIn(200)
+  $('body').append("<%= j render 'shared/modal' %>").hide().fadeIn(200)
 })
