Add and stylize homepage content

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,81 @@
-<h1>Homepage goes here!</h1>
+<section class="homepage-articles">
+  <article>
+    <h2>Abuso virtual contra crianças</h2>
+    <p>
+      Com a constante evolução da tecnologia e com a fácil acessibilidade aos
+      dispositivos computacionais, as crianças e adolescentes se tornam um alvo
+      fácil de criminosos, abusadores e pedófilos, na internet.
+    </p>
+    <p>
+      A internet, vista como anônima, um local de comunicação instantânea e
+      contendo diversos conteúdos inapropriados para menores, tornando-se uma
+      ameaça as crianças e adolescentes que a utilizam a mesma sem a supervisão
+      dos pais. Frequentemente dispondo informações pessoais, como, fotos,
+      endereço, telefone, informações familiares e onde reside.
+    </p>
+    <p>
+      O ataque contra crianças e adolescentes acontece quando são violados seus
+      direitos de intimidade, liberdade e dignidade, o que pode ocorrer por
+      violência física, psíquica e sexual, quanto pela falta de atenção e
+      negligenciados responsáveis, que não o suporte adequado a suas proles. os
+      abusos mais comuns as crianças e adolescentes que utilizam ambientes
+      virtuais são: sedução, onde o violentador tenta convencer ou fascinar a
+      mesma a participar de seu complô; enviar conteúdo pornográfico; gerar
+      e/ou distribuir materiais contendo atos sexuais; realizar cyberbullying
+      estímulo ao turismo sexual; exploração sexual, tráfico humano e/ou sexual.
+    </p>
+    <p>
+      Geralmente os criminosos fingem ser da mesma faixa etária da vítima,
+      fingindo ser amigos e conquistando a confiança da criança que é
+      facilmente manipulada.
+    </p>
+    <p>
+      Devem ser estabelecidas algumas regras pelos responsáveis, para o uso
+      seguro de crianças e adolescentes na rede. Tais como, quais os sites mais
+      visitados, restringindo os sites inapropriados para a faixa etária do
+      mesmo e auxiliando-o na procura por sites que tenham conteúdo apropriado
+      para sua idade. Com quem a criança ou adolescente está se comunicando,
+      informando-o para não expor informações pessoais e familiares, da mesma
+      forma como não manter contato com desconhecidos. Restringir as horas
+      online, encorajando a ter uma vida social, acadêmica, familiar, saudáveis
+      para isso, não é necessário exageros nos tempos em frente ao computador,
+      os autores indicam cerca de uma à duas horas diárias. Decidir onde ficará
+      o dispositivo computacional que a criança/adolescente terá acesso à
+      internet, sendo este, nunca trancada dentro do quarto.
+    </p>
+  </article>
+
+  <article>
+    <h2>Consequência dos abusos para as vítimas</h2>
+    <p>
+      Os abusos trazem consigo diversos danos ao desenvolvimento da vítima. O
+      abuso na infância/adolescência, tem sido relacionado a severas
+      consequências para o desenvolvimento infantil, incluindo prejuízos
+      cognitivos, emocionais, comportamentais e sociais.
+    </p>
+    <p>
+      As consequências do abuso sexual podem ser diferenciadas, se deve levar
+      em conta: a idade da vítima na época em que ocorreram os abusos; a
+      duração dos abusos e a frequência dos mesmos; qual a forma dos atos. O
+      abuso sexual infantil pode ocasionar consequências de três tipos: física,
+      psicológica ou de comportamento.
+    </p>
+    <p>
+      O abuso físico provoca dores constantes nas genitálias, lesões físicas
+      gerais (ex: hematomas, hemorragias), fraturas, queimaduras, (costumam ser
+      usadas como uma maneira de afrontar a vítima, controlá-la e dominá-la).
+      Ferimentos genitais também costumam ser comuns, e o mais frequente é a
+      laceração da mucosa anal. Podendo também ocorrer a transmissão de DST’s
+      (doenças sexualmente transmissíveis) e até acarretar uma gestação.
+    </p>
+    <p>
+      Além disso, há ainda as consequências psicológicas deixadas pelo
+      abusador, que podem acompanhar a vítimas para o resto de sua vida,
+      podendo determinar um comportamento anti-social e graves problemas
+      emocionais. A vítima tem grandes chances de apresentar dificuldade em
+      relações afetivas, se sentir amedrontada, culpada, ter baixa autoestima e
+      se sentir envergonhada pelos acontecidos. Apresentará dificuldades de
+      vínculo afetivo, como sentimento de culpa.
+    </p>
+  </article>
+</section>
