Add and stylize support content

--- a/app/views/pages/support.html.erb
+++ b/app/views/pages/support.html.erb
@@ -1,1 +1,58 @@
-<h1>Support page goes here!</h1>
+<section class="support">
+  <div class="support-header">
+    <h2>Onde vítimas de abusos ou violências<br> podem procurar ajuda?</h2>
+    <p>
+      É necessário que o individuo abusado e/ou violentado tenha todo o auxílio
+      primordial para o restabelecimento de sua integridade física e psíquica,
+      além de receber a devida proteção e afastamento do abusador. Por este
+      motivo, selecionamos alguns meios eficientes para se realizar a denuncia
+      de casos de abusos e/ou violência.
+    </p>
+  </div>
+
+  <div class="support-links">
+    <div class="support-link">
+      <h4>Disque denúncia</h4>
+      <p>
+        Discagem gratuita através do número 100. Atende 24 horas por dia em
+        todo o Brasil, incluindo em fins de semanas e feriados. As denúncias
+        realizadas são anônimas e seu sigilo é garantido.
+      </p>
+    </div>
+    <div class="support-link">
+      <h4>Conselho Tutelar</h4>
+      <p>
+        é um órgão administrativo municipal, autônomo, que atende crianças e
+        adolescentes que tem seus direitos violados e/ou ameaçados.
+      </p>
+    </div>
+    <div class="support-link">
+      <h4>Delegacia</h4>
+      <p>
+        Logo após o crime, a vítima deve se dirigir imediatamente (se possível)
+        a uma delegacia de polícia e registrar um boletim de ocorrência, tendo
+        a opção também de ligar para o número 190.
+      </p>
+    </div>
+    <div class="support-link">
+      <h4>Central de Atendimento à Mulher</h4>
+      <p>
+        Criado pela Secretaria de Políticas para as Mulheres da Presidência da
+        República (SPM-PR), é um disque-denúncia com capacidade de envio de
+        denúncias para a Segurança Pública com cópia para o Ministério Público
+        de cada estado. A ligação é gratuita e pode ser feita pelo número 180.
+      </p>
+    </div>
+  </div>
+
+  <div class="support-videos">
+    <div class="support-video">
+      <%= youtube_video "https://www.youtube.com/embed/9vyk2mtsJ6M?rel=0" %></div>
+    <div class="support-video">
+      <%= youtube_video "https://www.youtube.com/embed/ScAuarYtHpM?rel=0" %></div>
+    <div class="support-video">
+      <%= youtube_video "https://www.youtube.com/embed/e7GIYaZ0bGs?rel=0" %></div>
+    <div class="support-video">
+      <%= youtube_video "https://www.youtube.com/embed/AKEviWfyv7U?rel=0" %></div>
+  </div>
+</section>
