Add emotional phrase in the page footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,10 +47,13 @@
     <div class="container">
       <footer>
         <h2>Stop Abuses</h2>
-        <p>Emotional phrase</p>
+        <p>
+          A mudança dói. Mas nada vai doer mais que passar uma vida<br>inteira
+          preso em um lugar que te faz mal!<br>– Manual do homem moderno –
+        </p>
         <address>
           <%= link_to image_tag('gmail_icon.png', alt: 'Gmail icon'),
-                      'mailto:website@email.com',
+                      'mailto:abusosjabasta@gmail.com',
                       target: '_blank' %>
         </address>
       </footer>
