--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -88,7 +88,7 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 150px;
+  height: 200px;
   background-color: #ccc;
   margin-top: 30px;
 
@@ -99,7 +99,9 @@ footer {
 
   p {
     font-size: 14px;
-    margin: 12px 0;
+    margin: 15px 0;
+    text-align: center;
+    font-style: italic;
   }
 
   img {
